--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -78,9 +78,7 @@
          </md-button>
       </section>
       <div class="footer">
-         <div class="container">
-            <p>&copy; 2015 Teclib</p>
-         </div>
+         <p><a href="http://www.teclib.com">&copy; 2015 Teclib</a></p>
       </div>
       <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
       <!-- script>
