added pagination in all view

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -138,6 +138,7 @@
       <script src="scripts/controllers/author_plugins.js"></script>
       <script src="scripts/controllers/author.js"></script>
       <script src="scripts/directives/inlineauthors.js"></script>
+      <script src="scripts/directives/pagination.js"></script>
       <script src="scripts/controllers/langswitcher.js"></script>
       <script src="scripts/controllers/all.js"></script>
       <script src="scripts/controllers/authors.js"></script>
