exported es.svg to es.jpg in images/ ;used this one

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -61,7 +61,7 @@
                            <span class="flag-icon flag-icon-fr"></span>French
                         </md-option>
                         <md-option value="es">
-                           <span class="flag-icon flag-icon-es"></span>Spanish
+                           <span class="flag-es"></span>Spanish
                         </md-option>
                      </md-select>
                   </div>
