--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -86,7 +86,7 @@
            (A[l].q=A[l].q||[]).push(arguments)},A[l].l=+new Date,a=n.createElement(g),
            r=n.getElementsByTagName(g)[0],a.src=u,r.parentNode.insertBefore(a,r)
            }(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-           ga('create', 'UA-XXXXX-X');
+           ga('create', 'UA-66451493-2');
            ga('send', 'pageview');
            </script -->
       <script src="https://www.google.com/recaptcha/api.js?onload=vcRecaptchaApiLoaded&render=explicit" async defer></script>
