added a user-menu directive

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -141,6 +141,8 @@
       <script src="scripts/directives/usermenu.js"></script>
       <script src="scripts/controllers/panel.js"></script>
       <script src="scripts/controllers/version.js"></script>
+      <script src="scripts/directives/usermenu.js"></script>
+      <script src="scripts/controllers/panel.js"></script>
       <!-- endbuild -->
 
       <script>
