implements client side usage of lookup-by-version of plugins

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -142,6 +142,7 @@
       <script src="scripts/controllers/signup.js"></script>
       <script src="scripts/directives/usermenu.js"></script>
       <script src="scripts/controllers/panel.js"></script>
+      <script src="scripts/controllers/version.js"></script>
       <!-- endbuild -->
 
       <script>
