--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -134,6 +134,7 @@
       <script src="scripts/controllers/all.js"></script>
       <script src="scripts/controllers/authors.js"></script>
       <script src="scripts/controllers/tags.js"></script>
+      <script src="scripts/controllers/version.js"></script>
       <!-- endbuild -->
 
       <!-- script>
