--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -140,6 +140,7 @@
       <script src="scripts/services/fixindepnet.js"></script>
       <script src="scripts/directives/usermenu.js"></script>
       <script src="scripts/controllers/panel.js"></script>
+      <script src="scripts/controllers/version.js"></script>
       <!-- endbuild -->
 
       <script>
