--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -38,7 +38,7 @@
                   <input type="text" ng-model="search" class="search_bar" focus-me="$root.focusSearch" />
                </md-input-container>
             </div>
-            <div flex="15" user-menu></div>
+            <div flex="15" user-menu authed="false"></div>
          </div>
       </div>
       <section class="main" layout="row" flex>
@@ -101,6 +101,7 @@
       <script src="bower_components/showdown/src/showdown.js"></script>
       <script src="bower_components/angular-markdown-directive/markdown.js"></script>
       <script src="bower_components/matchMedia/matchMedia.js"></script>
+      <script src="bower_components/satellizer/satellizer.js"></script>
       <!-- endbower -->
       <script src="bower_components/moment/locale/en-gb.js"></script>
       <script src="bower_components/moment/locale/fr.js"></script>
@@ -143,6 +144,7 @@
       <script src="scripts/controllers/version.js"></script>
       <script src="scripts/directives/usermenu.js"></script>
       <script src="scripts/controllers/panel.js"></script>
+      <script src="scripts/controllers/signup.js"></script>
       <!-- endbuild -->
 
       <script>
