--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -145,6 +145,7 @@
       <script src="scripts/controllers/version.js"></script>
       <script src="scripts/controllers/signin.js"></script>
       <script src="scripts/services/auth.js"></script>
+      <script src="scripts/controllers/finishactivateaccount.js"></script>
       <!-- endbuild -->
 
       <script>
