--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -102,6 +102,7 @@
       <script src="bower_components/angular-markdown-directive/markdown.js"></script>
       <script src="bower_components/matchMedia/matchMedia.js"></script>
       <script src="bower_components/satellizer/satellizer.js"></script>
+      <script src="bower_components/angular-messages/angular-messages.js"></script>
       <!-- endbower -->
       <script src="bower_components/moment/locale/en-gb.js"></script>
       <script src="bower_components/moment/locale/fr.js"></script>
