proper behaviour of the profile form

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -147,6 +147,7 @@
       <script src="scripts/controllers/signin.js"></script>
       <script src="scripts/services/auth.js"></script>
       <script src="scripts/controllers/finishactivateaccount.js"></script>
+      <script src="scripts/services/toaster.js"></script>
       <!-- endbuild -->
 
       <script>
