base for 'api keys' feature

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -148,6 +148,7 @@
       <script src="scripts/services/auth.js"></script>
       <script src="scripts/controllers/finishactivateaccount.js"></script>
       <script src="scripts/services/toaster.js"></script>
+      <script src="scripts/controllers/apikeys.js"></script>
       <!-- endbuild -->
 
       <script>
