doing pre-authenticated account pairing helped via cookie set/unset

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -103,6 +103,7 @@
       <script src="bower_components/matchMedia/matchMedia.js"></script>
       <script src="bower_components/satellizer/satellizer.js"></script>
       <script src="bower_components/angular-messages/angular-messages.js"></script>
+      <script src="bower_components/angular-cookies/angular-cookies.js"></script>
       <!-- endbower -->
       <script src="bower_components/moment/locale/en-gb.js"></script>
       <script src="bower_components/moment/locale/fr.js"></script>
