usage of matchMedia polyfill by Modernizr

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -99,6 +99,7 @@
       <script src="bower_components/ngGallery/src/js/ngGallery.js"></script>
       <script src="bower_components/showdown/src/showdown.js"></script>
       <script src="bower_components/angular-markdown-directive/markdown.js"></script>
+      <script src="bower_components/matchMedia/matchMedia.js"></script>
       <!-- endbower -->
       <script src="bower_components/moment/locale/en-gb.js"></script>
       <script src="bower_components/moment/locale/fr.js"></script>
