factored a FormValidator service
that is going to be used everywhere

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -150,6 +150,7 @@
       <script src="scripts/controllers/finishactivateaccount.js"></script>
       <script src="scripts/services/toaster.js"></script>
       <script src="scripts/controllers/apikeys.js"></script>
+      <script src="scripts/services/formvalidator.js"></script>
       <!-- endbuild -->
 
       <script>
