--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -151,6 +151,7 @@
       <script src="scripts/services/toaster.js"></script>
       <script src="scripts/controllers/apikeys.js"></script>
       <script src="scripts/services/formvalidator.js"></script>
+      <script src="scripts/controllers/validatemail.js"></script>
       <!-- endbuild -->
 
       <script>
