allows client and api to handle plugin watchs

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -152,6 +152,7 @@
       <script src="scripts/controllers/apikeys.js"></script>
       <script src="scripts/services/formvalidator.js"></script>
       <script src="scripts/controllers/validatemail.js"></script>
+      <script src="scripts/controllers/notifications.js"></script>
       <!-- endbuild -->
 
       <script>
