--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -138,14 +138,14 @@
       <script src="scripts/controllers/version.js"></script>
       <!-- endbuild -->
 
-      <!-- script>
+      <script>
            !function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=l,A[l]=A[l]||function(){
            (A[l].q=A[l].q||[]).push(arguments)},A[l].l=+new Date,a=n.createElement(g),
            r=n.getElementsByTagName(g)[0],a.src=u,r.parentNode.insertBefore(a,r)
            }(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
            ga('create', 'UA-66451493-2');
            ga('send', 'pageview');
-           </script -->
+           </script>
       <script src="https://www.google.com/recaptcha/api.js?onload=vcRecaptchaApiLoaded&render=explicit" async defer></script>
    </body>
 </html>
