--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -153,6 +153,7 @@
       <script src="scripts/services/formvalidator.js"></script>
       <script src="scripts/controllers/validatemail.js"></script>
       <script src="scripts/controllers/notifications.js"></script>
+      <script src="scripts/controllers/pluginpanel.js"></script>
       <!-- endbuild -->
 
       <script>
