--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -136,6 +136,7 @@
       <script src="scripts/controllers/authors.js"></script>
       <script src="scripts/controllers/tags.js"></script>
       <script src="scripts/controllers/version.js"></script>
+      <script src="scripts/services/fixindepnet.js"></script>
       <!-- endbuild -->
 
       <script>
