adding the developer docs link to the navbar

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -70,7 +70,9 @@
                   <a ui-sref="all" ui-sref-active="active">{{'NAV_ALLPLUGINS'|translate}}</a>
                   <a ng-click="$root.focusSearch=true" ui-sref="search" ui-sref-active="active">{{'NAV_SEARCH'|translate}}</a>
                   <a ui-sref="submit" ui-sref-active="active">{{'NAV_SUBMIT_A_PLUGIN'|translate}}</a>
-                  <a ui-sref="contact" ui-sref-active="active">{{'NAV_CONTACT'|translate}}</a>
+                  <a ui-sref="contact" ui-sref-active="active">{{'NAV_CONTACT'|translate}}
+                  </a>
+                  <a ui-sref="developerdocs" ui-sref-active="active">{{'NAV_DEVELOPER_GUIDES'|translate}}</a>
                </nav>
             </md-sidenav>
             <md-button class="md-icon-button toggle_menu" hide-gt-md aria-label="Toggle Menu" ng-click="toggleNavBar()">
@@ -154,6 +156,7 @@
       <script src="scripts/controllers/validatemail.js"></script>
       <script src="scripts/controllers/notifications.js"></script>
       <script src="scripts/controllers/pluginpanel.js"></script>
+      <script src="scripts/controllers/developerdocs.js"></script>
       <!-- endbuild -->
 
       <script>
