--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -72,7 +72,7 @@
                   <a ui-sref="submit" ui-sref-active="active">{{'NAV_SUBMIT_A_PLUGIN'|translate}}</a>
                   <a ui-sref="contact" ui-sref-active="active">{{'NAV_CONTACT'|translate}}
                   </a>
-                  <a ui-sref="developerdocs" ui-sref-active="active">{{'NAV_DEVELOPER_GUIDES'|translate}}</a>
+                  <a ui-sref="developerguides" ui-sref-active="active">{{'NAV_DEVELOPER_GUIDES'|translate}}</a>
                </nav>
             </md-sidenav>
             <md-button class="md-icon-button toggle_menu" hide-gt-md aria-label="Toggle Menu" ng-click="toggleNavBar()">
@@ -156,7 +156,7 @@
       <script src="scripts/controllers/validatemail.js"></script>
       <script src="scripts/controllers/notifications.js"></script>
       <script src="scripts/controllers/pluginpanel.js"></script>
-      <script src="scripts/controllers/developerdocs.js"></script>
+      <script src="scripts/controllers/developerguides.js"></script>
       <!-- endbuild -->
 
       <script>
