Enhancements for small screen support in new header
in the new header (with usermenu)

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -32,13 +32,13 @@
                <h2>Plugins</h2>
                <div class='legend'>{{'SLOGAN' | translate}}</div>
             </div>
-            <div flex="55" flex-sm="100">
+            <div flex="55" flex-sm="100" flex-md="35">
                <md-input-container class="searchbox picbox md-accent md-hue-3">
                   <label>{{'SEARCHBAR_PLACEHOLDER'|translate}}</label>
                   <input type="text" ng-model="search" class="search_bar" focus-me="$root.focusSearch" />
                </md-input-container>
             </div>
-            <div flex="15" user-menu authed="authed"></div>
+            <div flex="15" flex-md="30" flex-sm="100" user-menu authed="authed"></div>
          </div>
       </div>
       <section class="main" layout="row" flex>
