--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -2,8 +2,8 @@
 <html>
    <head>
       <meta charset="utf-8" />
-      <title></title>
-      <meta name="description" content="" />
+      <title>GLPi Plugins</title>
+      <meta name="description" content="The GLPi Plugin Directory : All the plugins made for GLPi, by the GLPi open-source community" />
       <meta name="viewport" content="width=device-width" />
       <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
       <!-- build:css(.) styles/vendor.css -->
