Visual enhancements in the panel plugin page
 + ..
 + ...
 + ...

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -158,6 +158,7 @@
       <script src="scripts/controllers/pluginpanel.js"></script>
       <script src="scripts/controllers/developerguides.js"></script>
       <script src="scripts/services/exceptionrepresentationparser.js"></script>
+      <script src="scripts/directives/eatclickif.js"></script>
       <!-- endbuild -->
 
       <script>
