--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -25,7 +25,7 @@
       <!-- [if lte IE 8]>
            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
            <![endif] -->
-      <div class="header" ng-controller="HeaderCtrl">
+      <div class="header" ng-controller="HeaderCtrl" ng-cloak>
          <div layout="row" layout-wrap>
             <div flex="30" flex-sm="100" class='logo'>
                <a class="sitename" href="#/">Glpi</a>
@@ -41,13 +41,13 @@
             <div flex="15" flex-md="30" flex-sm="100" user-menu authed="authed"></div>
          </div>
       </div>
-      <section class="main" layout="row" flex>
+      <section class="main" layout="row" flex ng-cloack>
          <md-content class="wrapper" flex>
             <div class="container">
                <div ui-view></div>
             </div>
          </md-content>
-         <div ng-controller="NavCtrl" class="sidebar">
+         <div ng-controller="NavCtrl" class="sidebar" ng-cloack>
             <md-sidenav class="md-sidenav-right" md-component-id="side-menu" md-is-locked-open="$mdMedia('gt-md')">
                <md-button ng-click="closeNavBar()" class="md-icon-button" aria-label="Close Menu" hide-gt-sm>
                   <i class="fa fa-times-circle"></i>
