"I forgot my password" feature part. 7
 + the PUT /user/password request works
 + the state url has been updated to eat the token
 + the fields in the reset_password views have changed to type="password"
 + all the passwordResetTokens of account X are deleted when user Y changes his password, even if he has multiple tokens due to multiple following usages of the "i lost my password" feature

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -159,6 +159,7 @@
       <script src="scripts/controllers/developerguides.js"></script>
       <script src="scripts/services/exceptionrepresentationparser.js"></script>
       <script src="scripts/directives/eatclickif.js"></script>
+      <script src="scripts/controllers/resetpassword.js"></script>
       <!-- endbuild -->
 
       <script>
