try to render markdown tables

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -109,6 +109,7 @@
       <script src="bower_components/satellizer/satellizer.js"></script>
       <script src="bower_components/angular-messages/angular-messages.js"></script>
       <script src="bower_components/angular-cookies/angular-cookies.js"></script>
+      <script src='bower_components/showdown/src/extensions/table.js'></script>
       <!-- endbower -->
       <script src="bower_components/moment/locale/en-gb.js"></script>
       <script src="bower_components/moment/locale/fr.js"></script>
