--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -113,6 +113,7 @@
       <script src="bower_components/moment/locale/en-gb.js"></script>
       <script src="bower_components/moment/locale/fr.js"></script>
       <script src="bower_components/moment/locale/es.js"></script>
+      <script src="bower_components/moment/locale/cs.js"></script>
       <script src='bower_components/showdown/src/extensions/table.js'></script>
       <!-- endbuild -->
       <!-- build:js({.tmp,app}) scripts/scripts.js -->
@@ -120,6 +121,7 @@
       <script src="scripts/translations/en.js"></script>
       <script src="scripts/translations/fr.js"></script>
       <script src="scripts/translations/es.js"></script>
+      <script src="scripts/translations/cs.js"></script>
       <script src="scripts/conf.js"></script>
       <script src="scripts/colors.js"></script>
       <script src="scripts/routes.js"></script>
