add option to choose cs locale

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -67,6 +67,9 @@
                         <md-option value="es">
                            <span class="flag-es"></span>Spanish
                         </md-option>
+                        <md-option value="cs">
+                           <span class="flag-icon flag-icon-cz"></span>Czech
+                        </md-option>
                      </md-select>
                   </div>
                   <a ui-sref="featured" ui-sref-active="active">{{'NAV_FEATURED'|translate}}</a>
