Fix latest version in plugin's page and RSS feed

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -152,6 +152,7 @@
       <script src="scripts/controllers/tags.js"></script>
       <script src="scripts/controllers/version.js"></script>
       <script src="scripts/services/fixindepnet.js"></script>
+      <script src="scripts/services/pluginversions.js"></script>
       <script src="scripts/controllers/signup.js"></script>
       <script src="scripts/directives/usermenu.js"></script>
       <script src="scripts/controllers/panel.js"></script>
