--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -70,6 +70,9 @@
                         <md-option value="cs">
                            <span class="flag-icon flag-icon-cz"></span>Czech
                         </md-option>
+                        <md-option value="hr">
+                           <span class="flag-icon flag-icon-hr"></span>Croatian
+                        </md-option>
                      </md-select>
                   </div>
                   <a ui-sref="featured" ui-sref-active="active">{{'NAV_FEATURED'|translate}}</a>
