Add croatian translation

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -70,6 +70,9 @@
                         <md-option value="cs">
                            <span class="flag-icon flag-icon-cz"></span>Czech
                         </md-option>
+                        <md-option value="hr">
+                           <span class="flag-icon flag-icon-hr"></span>Croatian
+                        </md-option>
                      </md-select>
                   </div>
                   <a ui-sref="featured" ui-sref-active="active">{{'NAV_FEATURED'|translate}}</a>
@@ -117,6 +120,7 @@
       <script src="bower_components/moment/locale/fr.js"></script>
       <script src="bower_components/moment/locale/es.js"></script>
       <script src="bower_components/moment/locale/cs.js"></script>
+      <script src="bower_components/moment/locale/hr.js"></script>
       <script src='bower_components/showdown/src/extensions/table.js'></script>
       <!-- endbuild -->
       <!-- build:js({.tmp,app}) scripts/scripts.js -->
@@ -125,6 +129,7 @@
       <script src="scripts/translations/fr.js"></script>
       <script src="scripts/translations/es.js"></script>
       <script src="scripts/translations/cs.js"></script>
+      <script src="scripts/translations/hr.js"></script>
       <script src="scripts/conf.js"></script>
       <script src="scripts/colors.js"></script>
       <script src="scripts/routes.js"></script>
